--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node --env-file=.env src/index.js",
     "devi": "nodemon -r dotenv src/index.js",
-    "dev": "nodemon --env-file=.env src/index.js"
+    "deva": "nodemon --env-file=.env src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
